# dev

./: .gitignore  AUntitled-1.py  CATS.pem  Untitled-1.py  WTF.py  Word - Personnalisations.exportedUI  Word Customizations.exportedUI  adzazdazazd.py  async.py  aze.py  azeazrzat.py  azetzez.py  end.py  folder_to_markdown.py  for_all_folders.py  for_all_testing.py  generate_workspace.ps1  nn_generate_ws.ps1  rfjohugli.py  settings-terminal.json  some.py  some.rs  someaz.py  sometimes.py  tazuku_raw.py  tz0.py  zaeazrza.py  zaettur.py
01_07_2021/: LSEllipse.cpp  LSEllipse.h  Renderer.h  aezgza.py  azezgkmlrezopicjem.py  betterto.py  intera.py  kindof.py  log20210709_080231_imm_.csv  manythings.ipynb  manythings.py  mightbe.py  oeiurgper.py  onlyhave.py  plot.py  seemswork.py  soazr.py  something.py  test.ipynb  tetr.py  thread.py  treazd.py  trsazd.py  wtf.py  zafzafze.py
CATS/: manifest.json
ML/cours/: wine_db_viz.ipynb  wine_db_viz.py
NN/: Cargo.toml
NN/src/: azrat.rs  main.rs
NeNet/: Cargo.toml
NeNet/src/: dontwork.rs  dontwork2.rs  main.rs  thrasd.rs  trash.rs  v1.rs  work.rs  wtf.rs  wtf_child.rs
PL/: setup.py
VS_Code_macro/: some.rs
VectorMagic_try_debunk/dissasemble/: Vector Magic Website.url  license.txt  license_ann.txt  release_notes.txt
adam4rust/: Cargo.toml  class_dict.py  opti.rs  some copy.py  some.py
adam4rust/src/: adam.rs  dict.rs  main.rs  opti.rs  some_copy.rs  some_copy_old.rs  util.rs
azfevzr/: Cargo.toml
azgrz/: Cargo.toml
captrs-master/: Cargo.toml  frame1.qoi  frame2.qoi
captrs-master/examples/: image.rs
cargo-force-build/: Cargo.toml
cargo-force-build/src/: debug.rs  main.rs
cats_macro/: Cargo.toml
cats_macro/src/: lib.rs
client/: Cargo.toml
cpp/: lol.cpp  lol1.cpp
daz/: zda.py
elexc/: Cargo.toml
equa_sol/: Cargo.toml
equation-sol/: Cargo.toml
gpt-engineer-e7e329211655d08e48d04ce828f929c9108050ad/: ai.py  db.py  main.py
hello_torch_rust/: ReadMe.md  build.rs
hello_torch_rust_portable/: Cargo.toml
javascri/: some.html
my_workspace/: Cargo.toml
my_workspace_portable/: Cargo-CATS.toml  Cargo.toml
nn_GPT/: Cargo.toml
nnweb/: build_and_run.ps1  build_and_run.sh  create_project_files.ps1  create_project_files.sh  deploy.ps1  deploy.sh  install_prerequisites.ps1  install_prerequisites.sh
online_stuf/: README.md
op_digit/: Cargo.toml
open_cv_svg/: Cargo.toml
paralele/: Cargo.toml
prime-from-1/: Cargo.toml
project/: Cargo.toml
rebuild_test/: Cargo.toml
rust-NN/: Cargo.toml  numpy_shit.py  op.py  op2.py  some.py  test.py  test_numpy.py
rust-NN/src/: NeuralNetwork.rs  Neuron.rs  adam.rs  dot_product.rs  linear-model.rs  lol1.rs  main.rs  mods.rs  op2.rs  op3.rs  testing.rs  testing10.rs  testing11.rs  testing12.rs  testing2.rs  testing3.rs  testing4.rs  testing5.rs  testing6.rs  testing7.rs  testing8.rs  testing9.rs  tests.rs  type.rs
rust/dictionnaire/: Cargo.toml  camera_focus.py  camera_focus.rs  camera_publisher.py  camera_zoom_service.py  zoom_kurokesu.py
rust/dictionnaire/src/: camera_focus.rs  camera_publisher.rs  camera_zoom_service.rs  dict.rs  hello.rs  lib.rs  main.rs  razd.rs  temp.rs  zoom_kurokesu.rs
rust4python/: Cargo.toml  build.rs  main.py  test.py
rust4python/src/: lib.rs
rust_python_integration/: Cargo.toml  my_python_module copy.py  my_python_module copy.spec
serveur/: 404.html  Cargo.toml
sixtyfps/testing/: Cargo.toml  build.prs
sixtyfps/testing/src/: main.rs
stage/: comm.py  ellipse_fitting.py  ellipsoid.py
str_to_func/: Cargo.toml
svg glory/: gradiant_transform_manipulation_CG.html  gradiant_trasform_manipulation.html  some.css  some.html  transform-origin.css  transform-origin.html
temp/: Cargo.toml
temp_perf/cargo-cats/: Cargo.toml
temp_perf/cargo-cats/src/: main.rs
temp_perf/cargo-rost/: Cargo.toml
temp_perf/cargo-ws/: Cargo.toml  Cargo2.toml  test.txt
temp_perf/cargo-ws/afaze/winer/: Cargo.toml
temp_perf/cargo-ws/afaze/woner/: Cargo.toml
temp_perf/cargo-ws/afaze/word/: Cargo.toml
temp_perf/cargo-ws/azereazf/: Cargo.toml
temp_perf/cargo-ws/azgree/aefzg/dazezgr/: Cargo.toml
temp_perf/cargo-ws/azgree/aefzg/dazezgr/rgeregz/dazretr/: Cargo.toml
temp_perf/cargo-ws/azgree/aefzg/dazezgr/src/: main.rs
temp_perf/cargo-ws/firstlevel/: Cargo.toml
temp_perf/cargo-ws/firstlevel/secondlevel/: Cargo.toml
temp_perf/cargo-ws/firstlevel/secondlevel/thirdlevel/: Cargo.toml
temp_perf/cargo-ws/firstlevel/secondlevel/thirdlevel/src/: main.rs
temp_perf/cargo-ws/lol/de/: Cargo.toml
temp_perf/cargo-ws/somut/: Cargo.toml  libmain.rlib  libmainazcopy.rlib  main.dll.exp  main.dll.lib  main_copy.dll.exp  main_copy.dll.lib  maindzafg.dll.exp  maindzafg.dll.lib  mazraze.cpp
temp_perf/cargo-ws/somut/loaz/: commands.txt  hello.c  something.c
temp_perf/cargo-ws/somut/src/: libtype_lib.rlib  libtype_rlib.rlib  type_bin.rs  type_cdylib.dll.exp  type_dylib.dll.exp  type_dylib.rs  type_lib.rs  type_proc_macro.dll.exp
temp_perf/cargo-ws/somut/src/Nouveau dossier/: type_cdylib.rs  type_proc-macro.rs  type_staticlib.rs
temp_perf/cargo-ws/somut/src/type_cdylib/: type_cdylib.dll.exp  type_cdylib.dll.lib
temp_perf/cargo-ws/somut/src/type_dylib/: type_dylib.dll.exp  type_dylib.dll.lib
temp_perf/cargo-ws/somut/src/type_lib/: libtype_lib.rlib
temp_perf/cargo-ws/somut/src/type_proc_macro/: type_proc_macro.dll.exp  type_proc_macro.dll.lib
temp_perf/cargo-ws/somut/src/type_rlib/: libtype_rlib.rlib  type_rlib.rs
temp_perf/cargo-ws/src/: main - Copie.rs  main.rs
to_study/: Cargo.toml
web_sys_stuff/unify/: Cargo.toml  index.html  index.js  webpack.config.js
web_sys_stuff/unify/crate/src/: lib.rs
web_sys_stuff/unify/src/: canvas.rs  closures.rs  console.rs  counter.rs  dom.rs  fetch.rs  js_fn.rs  julia_set.rs  lib.rs  mod.rs  paint.rs  performance.rs  request_animation_frame.rs  wasm_wasm.rs  wasm_wasm_imports.rs  weather.rs  webgl.rs  webrtc.rs  websockets.rs
wgpu_stuf/: Cargo.toml  README.md
wgpu_stuf/wgsl-playground-main/: Cargo.toml
wgsl/: dza.wgsl
winit-master/: workspace.code-workspace
zer/: Cargo.toml
(+343 files in other folders)
