[package]
name = "cats_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = {version = "*",features = ["full", "visit-mut","extra-traits"]}
quote = "*"
proc-macro2 = "*"
