[package]
name = "dictionnaire"
version = "0.1.0"
edition = "2021"
default-run = "main"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro= true
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

# [[bin]]
# name = "camera_zoom_service"
# path = "src/camera_zoom_service.rs"
# [[bin]]
# name = "camera_publisher"
# path = "src/camera_publisher.rs"
# [[bin]]
# name = "camera_focus"
# path = "src/camera_focus.rs"
# [[bin]]
# name = "zoom_kurokesu"
# path = "src/zoom_kurokesu.rs"

[dependencies]
# dictionnaire= "*"
# json="*"
# maplit = "*"