[package]
name = "testing"
version = "0.1.0"
# build = "build.rs"
resolver = "2" # avoid dependency conflicts on some platforms
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sixtyfps = "0.1.5"

# [build-dependencies]
# sixtyfps-build = "0.1.5"