[package]
name = "cargo-rost"
version = "0.0.1"
edition = "2018"
authors = ["CATS <Aurelien.Couthures@gmail.com>"]
description = "CATS's"
license = "MIT"
readme = "README.md"
repository = "https://github.com/CoAuToSe/cargo-rost"
homepage = "https://github.com/CoAuToSe/cargo-rost"
documentation = "https://docs.rs/cargo-rost"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
