# [package]
# name = "cargo-ws"
# version = "0.1.0"
# edition = "2018"
# # workspace ="."

# # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# env_logger = "*"
# log = "*"


[workspace]
members = [
    "somut",
    "lol/de",
    "firstlevel/secondlevel/thirdlevel",
    "azgree/aefzg/dazezgr",
    "azereazf",
    # "!.*",
    # "**/Cargo.toml",
    # "*",
    # "**/.*",
    ]
# exclude = [
#     ".git",
#     "target",
#     "src",
#     "afaze",
#     "azgree",
#     "lol",
#     "firstlevel",
#     # "!.*",
#     ]

# [dependencies]
# lol = { path = "lol" }